Switched from some java8 libraries to similar java7